--- a/app.json
+++ b/app.json
@@ -20,6 +20,9 @@
     },
     "SECRET_KEY_BASE": {
       "required": true
+    },
+    "DATABASE_URL": {
+      "generated": true
     }
   },
   "formation": {
