--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "name": "umpire",
   "scripts": {
+    "postdeploy": "pg_dump $STAGING_DATABASE_URL | psql $DATABASE_URL && bundle exec rake db:migrate"
   },
   "env": {
     "HEROKU_POSTGRESQL_SILVER_URL": {
